--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
     display: flex;
     align-items: center;
     gap: 50px;
-    padding: 20px 40px;
-    margin-top: 10px;
+    padding: 13px 40px;
+    /* margin-top: 10px; */
 }
 
 .line{
